--- a/style.css
+++ b/style.css
@@ -6,15 +6,17 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: order-box;
     text-decoration: none;
     list-style: none;
     font-family: "Poppins",sans-serif;
+    
 
 }
 
 body{
     overflow: hidden;
+    overflow-y: scroll;
 }
 
 .background{
@@ -23,7 +25,9 @@ body{
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 101vh;
+    height: 100vh;
+    position: relative;
+    
     
 }
 
@@ -250,3 +254,15 @@ button:hover{
  }
 
 }
+
+/* meio da pagina*/
+.meio-pagina{
+    background-color: #333333;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    
+    
+}
+
+
